# bio-causal-memory

./: CLAUDE.md  README.md  pyproject.toml
bcm/: cli.py
bcm/agents/: claude_runner.py  prompt_templates.py
bcm/eval/: bioagent_metrics.py  causal_path_metrics.py  failure_localization.py  repair_eval.py
bcm/graph/: causal_labeler.py  exporters.py  graph_store.py  provenance_builder.py  schema.py
bcm/ingest/: artifact_scanner.py  bioagent_loader.py  bioagent_task_adapter.py  log_parser.py  trace_loader.py  trace_normalizer.py
bcm/memory/: entity_index.py  keyword_index.py  temporal_index.py  vector_index.py
bcm/retrieval/: anchor_finder.py  causal_traversal.py  context_builder.py  router.py
data/fixtures/: transcript_quant_task.json
data/graphs/: transcript_quant_failed_toy.graph.json
data/runs/: transcript_quant_bioagent_like_failed.json  transcript_quant_failed_toy.json
docs/: EXECUTION_PLAN.md  PROJECT_SETUP.md  v0.1.md
experiments/: 001_build_toy_graph.sh  002_query_toy_failure.sh  003_compare_memory_baselines.sh
tests/: test_bioagent_task_adapter.py  test_causal_traversal.py  test_context_builder_ordering.py  test_log_edges.py  test_provenance_builder.py  test_realistic_transcript_quant_trace.py  test_schema.py  test_trace_loader.py
